# desktopinator

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  VISION.md  dev.sh  more-ideas.md  test-vm.sh  use-cases.md
.github/workflows/: ci.yml  release.yml
crates/desktopinator/: Cargo.toml
crates/desktopinator/src/: adaptive.rs  audio.rs  clipboard.rs  config.rs  cursors.rs  displaycontrol.rs  drm_backend.rs  gfx.rs  ipc.rs  main.rs  text.rs
crates/dinator-core/: Cargo.toml
crates/dinator-core/src/: handlers.rs  input.rs  lib.rs  state.rs  xwayland.rs
crates/dinator-encode/: Cargo.toml
crates/dinator-encode/src/: ffmpeg.rs  lib.rs  software.rs
crates/dinator-ipc/: Cargo.toml
crates/dinator-ipc/src/: lib.rs
crates/dinator-lua/: Cargo.toml
crates/dinator-lua/src/: lib.rs
crates/dinator-plugin-api/: Cargo.toml
crates/dinator-plugin-api/src/: lib.rs
crates/dinator-tiling/: Cargo.toml
crates/dinator-tiling/src/: lib.rs
crates/dinator-wasm/: Cargo.toml
crates/dinator-wasm/src/: lib.rs
crates/dinatorctl/: Cargo.toml
crates/dinatorctl/src/: main.rs
crates/ironrdp-acceptor-patched/src/: connection.rs
crates/ironrdp-server-patched/src/: server.rs
logs/: notification.json  pre_compact.json  stop.json
plugins/: grid.lua
plugins/wasm-grid/: Cargo.toml
plugins/wasm-grid/logs/: notification.json
plugins/wasm-grid/src/: lib.rs
