[workspace]
resolver = "2"
exclude = ["plugins/wasm-grid"]
members = [
    "crates/desktopinator",
    "crates/dinator-core",
    "crates/dinator-tiling",
    "crates/dinator-ipc",
    "crates/dinator-plugin-api",
    "crates/dinator-lua",
    "crates/dinator-wasm",
    "crates/dinatorctl",
    "crates/dinator-encode",
]

[workspace.dependencies]
smithay = { version = "0.7", default-features = false, features = [
    "backend_winit",
    "backend_egl",
    "renderer_gl",
    "desktop",
    "wayland_frontend",
    "xwayland",
] }
calloop = { version = "0.14", features = ["executor"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[patch.crates-io]
ironrdp-acceptor = { path = "crates/ironrdp-acceptor-patched" }
ironrdp-server = { path = "crates/ironrdp-server-patched" }
