[package]
name = "desktopinator"
version = "0.1.0"
edition = "2021"

[dependencies]
dinator-core = { path = "../dinator-core" }
dinator-ipc = { path = "../dinator-ipc" }
serde_json = { workspace = true }
smithay = { workspace = true }
calloop = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
rustvncserver = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net"] }
