[package]
name = "desktopinator"
version = "0.1.0"
edition = "2021"

[dependencies]
dinator-core = { path = "../dinator-core" }
dinator-ipc = { path = "../dinator-ipc" }
dinator-tiling = { path = "../dinator-tiling" }
dinator-plugin-api = { path = "../dinator-plugin-api" }
dinator-lua = { path = "../dinator-lua" }
dinator-wasm = { path = "../dinator-wasm" }
serde_json = { workspace = true }
smithay = { workspace = true }
calloop = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
rustvncserver = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net"] }
ironrdp-server = { version = "0.10", default-features = true, features = ["helper"] }
async-trait = "0.1"
bytes = "1"
rcgen = "0.14"
