[package]
name = "dinator-core"
version = "2026.3.27"
edition = "2021"

[dependencies]
smithay = { workspace = true }
calloop = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
dinator-ipc = { path = "../dinator-ipc" }
dinator-tiling = { path = "../dinator-tiling" }
dinator-plugin-api = { path = "../dinator-plugin-api" }
