[package]
name = "dinator-encode"
version = "2026.3.28"
edition = "2021"

[features]
default = ["software"]
software = ["dep:openh264"]
ffmpeg = ["dep:ffmpeg-next"]

[dependencies]
tracing = { workspace = true }
anyhow = { workspace = true }
openh264 = { version = "0.6", optional = true }
ffmpeg-next = { version = "8.0", optional = true }
